# rk3588-yolov11n

./: .gitignore  DEPLOYMENT.md  README.md  deploy_optimized.sh  deploy_to_board.sh  package-lock.json  package.json  skills-lock.json
.opencode/plans/: 2026-06-01-code-refactoring.md
app/: config.py  main.py
app/capture/: v4l2_camera.py
app/infer/: engine.py  native_engine.py
app/pipeline/: __init__.py  buffer.py
app/rules/: engine.py
app/storage/: events.py
app/web/: server.py
app/web/templates/: index.html
configs/: config.example.yaml  config_yolo11m.yaml  config_yolo11s.yaml  train_optimized.yaml  train_v5.yaml
native/: CMakeLists.txt  build.sh  build_gpp.sh  mpp_jpeg_decoder.cpp  mpp_jpeg_decoder.h  rknn_infer.cpp  rknn_infer.h  v4l2_camera.cpp  v4l2_camera.h
scripts/: convert_yolo11.py  debug_yolo11_output.py  fix_cutter_labels_v2.py  fix_polygon_labels.py  prepare_dataset.py  profile_infer.py  profile_optimized.py  sample_infer_100.py  train_optimized.sh  train_v5.sh
systemd/: desk-safety.service
tests/: test_infer_decode.py  test_rules.py  test_yolo11_consistency.py  test_yolo11_decode.py
